[project]
name = "comfyui_stealth_pnginfo"
description = "Read and write 'stealth metadata' in PNG files"
version = "1.0.0"

[project.urls]
Repository = "https://github.com/catboxanon/comfyui_stealth_pnginfo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "catboxanon"
DisplayName = "comfyui_stealth_pnginfo"
